--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-redux": "^8.1.3",
     "yup": "^1.3.2"
   },
   "devDependencies": {
