--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "jwt-decode": "^4.0.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
